# HoneycombHeisenbergJ1J2J3

./: .gitignore  CMakeLists.txt  README.md
ClockModel/: ClockMCExecutor.h  clock.cpp  clock_config.h  clock_dof.h  clock_params_case.h  params.json
MonteCarlo_src/: ExchangeMCExecutor.h  MC_params_case.h  WolfMCExecutor.h  XYMCExecutor.h  anisotropy_test1.cpp  classical_heisenberg.cpp  common.h  const.h  coupling.h  heisenberg_exchange.cpp  ising.cpp  ising_exchange.cpp  ising_statistic.cpp  ising_test.cpp  lattice_config.h  lattice_link.h  local_dof.h  params.json  statistic.cpp  statistic_heisenberg_exMC.cpp  swcluster.h  test.cpp  xy_params.json  xy_test.cpp  xymodel.cpp
XTRG_common/: density_matrix_initializer.h  mpo_utility.h  mpopp.h  transverse_ising_test.cpp  xtrg.h  xtrg_impl.h  xtrg_params.h  xy_model_test.cpp
draft/: GSYC6.eps  HoneycombLattice.eps  Method_theory.docx  NiPS3 monolayer AFM-20220525 to Prof.Xiong QX-LL-20220626-6 2.docx  PRBLetterReply_HX.docx  SI for NiPS3 monolayer V2 CYZ-HXW.docx  SI_theoretic20221220.docx  Theoretic_part.docx  support_information(theoretic).docx
figure/: Fig4-v2.eps  Fig4.ai  Fig4.eps  Fig4_version1.eps  FigureSt2.eps
note/: Note20220912.key  Result-Note.key
plot/: ClockPhaseDiagram.m  Debug.m  Ising.m  Leon.m  LeonCorrelation.m  LeonFitFIniteSize.m  LeonFitFIniteSize2.m  NiPS3Stiffness.eps  NiPS3Stiffness.m  NiPSStiffnessDzz0_01.m  PlotSpinCorrelationInLatticeXC.m  PlotSpinCorrelationInLatticeYC.m  PlotXCHoneycombLattice.m  PlotYCHoneycombLattice.m  SpinCorrelationXC6x12.m  SpinCorrelationYC4x8.m  SpinCorrelationYC6x12.m  SpinStructFactorXC6x12.m  SpinStructFactorYC6x12.m  XTRG_specific_heat.m  XYproperties.m  YC-cylinder.eps  classical_ground_state.m  distributaion_complex_orderparameter.m  ising_finite_size.m  lattice_spin.eps  lattice_spinXC6.eps  lattice_spinYC6.eps  magnetic_susceptibilityNiPS332x32.eps  plot_spin_oritation.m  plot_spincorrelation.m  specific_heatNiPS332x32.eps  spin_correlationXC6x12.eps  spin_correlationYC4x8.eps  struct_factor2.eps  structure_factor.eps  structure_factorXC6.eps  testNiPS3.m  testising.m  testisingchi.m  (+1 more)
plot/DMRG/: HoneycombXCCylinderSiteInd2XYCoor.m  HoneycombYCCylinderSiteInd2XYCoor.m  PlotSpinCorrelationInLatticeXC.m  PlotSpinCorrelationInLatticeYCNiPS.m  PlotXCHoneycombLattice.m  PlotYCHoneycombLattice.m  SpinCorrelationXC6x12.m  SpinStructFactorYC6x12J38.m  XC-cylinder.eps  lattice_spinXC-v2.eps  structure_factorXC6.eps  structure_factorYC6.eps
plot/MonteCarlo/: D3dDzz0_113_small_anisotropy.m  D3dFit_eta.m  D3dJ3_38StiffnessDzz0_113.m  D3dcorrelationDzz0_113_small_ani.m  FitExponent.m  Heisenberge_SU2OnlyJ1.m  Ising_square0.m  Ising_zigzag.m  NiPS3Stiffness.eps  NiPS3U1M2.eps  NiPS3U1SpecificHeat.eps  NiPS3_U1_AF_susceptibility.eps  NiPS3_U1_C3.eps  NiPS3_U1_C3_chi.eps  NiPS3_U1_binder_ratio_C3.eps  NiPS3_U1_exchange_algorithm.m  NiPSD3dFiniteSizesmall_ani2.m  NiPSD3dJ328Dzz0_113_small_ani2.m  NiPSD3dJ328FiniteSize.m  NiPSD3dJ328PropertiesDzz0_113.m  NiPSD3dJ328_00001StiffnessDzz0_113.m  NiPSD3dsamall_ani_scaling.m  SU2Case.m  U1Dzz0_113Fit_eta.m  U1PropertiesDzz0_113.m  U1PropertiesDzz0_3.m  U1PropertiesDzz1.m  U1_AF_magnetization.eps  U1_specific_heat.eps  U1_stiffness_D0_3.eps  U1_stiffness_D1.eps  clock6hp0.m  clock6hp0_02.m  clock6hp0_1.m  clock6hp0_3.m  clock6hp1.m  ising_exchange_algorithm.m  ising_square.m
spin_wave/: DOSHoneycombJ1J3Dzz.m  HoneycombJ1Dzz.m  HoneycombJ1J3Dzz.m  SquarelatticeXXZ.m
src/: DefSpinOne.h  continue.cpp  contract_demo.cpp  dmrg.cpp  fix_env.cpp  fix_mps.cpp  honeycomb_lattice.h  measure1.cpp  measure_spin_structure_factor.cpp  mpogen.cpp  my_measure.h  myutil.cpp  myutil.h  operators.cpp  operators.h  params.json  params_case.h  two_site_update_noised_finite_vmps_mpi_impl3.h  xtrg.cpp
